# AI-Meal-Prep-Planner

./: .gitignore  README.md  app.py  app.txt  appliances.py  globals.py  planner_prompt.py  profile.json  prompts.py  pyproject.toml  requirements.txt  setup.cfg  text.py
pages/: privacy.py  terms.py
src/ai_meal_prep_planner/: __init__.py  cli.py  planner.py
tests/: test_planner.py
utils/: dummy_mealplanner.py  firebase_client.py  meal_planner.py  mock_generator.py  prompts.py
