[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-meal-prep-planner"
version = "0.1.0"
description = "AI Meal Prep Planner - Python project scaffold"
readme = "README.md"
authors = [ { name = "cjawale-QABA" } ]
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
    "google-genai==1.12.1",
    "python-dotenv==1.1.0",
]
